@@ -30,6 +30,7 @@
 			<formatter type="xml"/>
 			<test name="de.uka.ilkd.key.suite.TestKey" todir="${test.reports}" />
 			<test name="de.uka.ilkd.key.proof.runallproofs.RunAllProofsTest" todir="${test.reports}" />
+			<test name="de.uka.ilkd.key.proof.proverules.ProveRulesTest" todir="${test.reports}" />
 		</junit>
 		<fail message="Test failure detected, check test results." if="test.failedOrError" />
 	</target>
@@ -47,7 +48,7 @@
       </java>
    </target>
    
-   <target name="runTests" depends="runJavaTests, runAllProofs">
+   <target name="runTests" depends="runJavaTests, runAllProofs, proveRules">
    </target>
 
 	<target name="runJavaTests" depends="compile">
@@ -94,6 +95,30 @@
 			</classpath>
 			<formatter type="brief" usefile="false" />
 			<test name="de.uka.ilkd.key.proof.runallproofs.RunAllProofsTest" />
+		</junit>
+	</target>
+
+	<target name="proveRules" depends="compile">
+	<!-- ProveRules documentation can be found at: key/doc/README.proveRules -->
+		<junit printsummary="withOutAndErr" haltonfailure="no"
+		       fork="yes" forkMode="once" haltonerror="no"
+		       enableTestListenerEvents="false"
+		       showoutput="yes" dir="${basedir}">
+			<jvmarg value="-Xmx2048m"/>
+			<jvmarg value="-XX:MaxPermSize=256m"/>
+			<jvmarg value="-ea"/>
+			<classpath>
+				<pathelement path="${basedir}/../key.core/bin"/>
+				<pathelement path="${basedir}/../key.util/bin"/>
+				<pathelement location="${lib.dir}/recoderKey.jar"/>
+				<pathelement location="${lib.dir}/antlr.jar"/>
+				<pathelement location="${basedir}/../key.util.test/lib/junit-4.12.jar"/>
+				<pathelement location="${basedir}/../key.util.test/lib/hamcrest-core-1.3.jar"/>
+				<pathelement path="${basedir}/../key.util.test/bin"/>
+				<pathelement path="${build.dir}"/>
+			</classpath>
+			<formatter type="brief" usefile="false" />
+			<test name="de.uka.ilkd.key.proof.proverules.ProveRulesTest" />
 		</junit>
 	</target>
 
